--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,4 +1,4 @@
-.header  {
+.header {
   font-family: monospace;
   background: papayawhip;
 }
@@ -22,4 +22,22 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+/* solution */
+
+.header {
+  display: flex;
+  align-items: center;
+  padding: 8px;
+}
+
+.logo {
+  margin: 0 auto;
+}
+
+ul {
+  display: flex;
+  padding: 0;
+  gap: 8px;
 }
